update styling and add more imgs for port

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.1.css"
+      href="dist/css/styles_version2.2.css"
     />
   </head>
 
@@ -159,8 +159,18 @@
           2215 N. Overland Trl.<br />
           80521<br />
           USA<br />
-          Email: ericcjameson@gmail.com<br />
+          <a href="mailto:ericcjameson@gmail.com">
+            Email: ericcjameson@gmail.com
+          </a>
+          <br />
           Phone: (970)-980-8519<br />
+          <a href="https://medium.com/@ericcjameson">
+            Medium
+          </a>
+          <br />
+          <a href="https://twitter.com/cruejameson">
+            Twitter
+          </a>
         </div>
 
         <div class="cv-container">
@@ -184,7 +194,7 @@
           <a href="https://github.com/Cruebee" target="_blank"
             ><img src="img/github_icon.svg" alt="Github"
           /></a>
-          <a href="https://twitter.com/cruebee" target="_blank"
+          <a href="https://twitter.com/cruejameson" target="_blank"
             ><img src="img/twitter_icon.svg" alt="Twitter"
           /></a>
           <a
