--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.1.css"
+      href="dist/css/styles_version2.2.css"
     />
   </head>
 
@@ -91,7 +91,7 @@
               <a href="https://github.com/Cruebee" target="_blank"
                 ><img src="img/github_icon.svg" alt="Github"
               /></a>
-              <a href="https://twitter.com/cruebee" target="_blank"
+              <a href="https://twitter.com/cruejameson" target="_blank"
                 ><img src="img/twitter_icon.svg" alt="Twitter"
               /></a>
               <a
