--- a/meetemup.html
+++ b/meetemup.html
@@ -30,7 +30,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.1.css"
+      href="dist/css/styles_version2.2.css"
     />
   </head>
 
@@ -96,7 +96,7 @@
         </p>
         <img
           class="app-image"
-          src="img/meetemup.png"
+          src="img/meet1.jpeg"
           alt="Meet-Em-Up screenShot"
         />
 
@@ -119,13 +119,21 @@
             </p>
           </div>
           <div class="grid-1_img__item">
-            <img style="width: 100%;" src="" alt="Meet-Em-Up Searching" />
+            <img
+              style="width: 100%;"
+              src="img/meet2.jpeg"
+              alt="Meet-Em-Up Searching"
+            />
           </div>
         </div>
 
         <div class="grid-2">
           <div class="grid-2_img__item">
-            <img style="width: 100%;" src="" alt="meet-em-up img" />
+            <img
+              style="width: 100%;"
+              src="img/meet3.jpeg"
+              alt="meet-em-up img"
+            />
           </div>
           <div class="grid-2__item">
             <h2 class="project-title-left">
@@ -172,13 +180,30 @@
             </p>
           </div>
           <div class="grid-1_img__item">
-            <img style="width: 100%;" src="" alt="Meet-Em-Up user stories" />
+            <img
+              style="width: 100%;"
+              src="img/meetup-comp.png"
+              alt="Meet-Em-Up user stories"
+            />
+          </div>
+        </div>
+
+        <div class="single-grid">
+          <div class="single-grid__img">
+            <img
+              style="width: 100%; margin-top: 0.5rem;"
+              src="img/meet-group.svg"
+            />
           </div>
         </div>
 
         <div class="grid-2">
           <div class="grid-2_img__item">
-            <img style="width: 100%;" src="" alt="meet-em-up img" />
+            <img
+              style="width: 100%;"
+              src="img/meet4.jpeg"
+              alt="meet-em-up img"
+            />
           </div>
           <div class="grid-2__item">
             <h2 class="project-title-left">
@@ -206,7 +231,7 @@
           <a href="https://github.com/Cruebee" target="_blank"
             ><img src="img/github_icon.svg" alt="Github"
           /></a>
-          <a href="https://twitter.com/cruebee" target="_blank"
+          <a href="https://twitter.com/cruejameson" target="_blank"
             ><img src="img/twitter_icon.svg" alt="Twitter"
           /></a>
           <a
