--- a/poke-tracker.html
+++ b/poke-tracker.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.1.css"
+      href="dist/css/styles_version2.2.css"
     />
   </head>
 
@@ -152,7 +152,20 @@
             </p>
           </div>
           <div class="grid-1_img__item">
-            <img style="width: 100%;" src="" alt="poke-wireframes" />
+            <img
+              style="width: 100%; max-height: 400px;"
+              src="img/pokedex-wire.jpeg"
+              alt="poke-wireframes"
+            />
+          </div>
+        </div>
+
+        <div class="single-grid">
+          <div class="single-grid__img">
+            <img
+              style="width: 75%; margin-top: 0.5rem;"
+              src="img/poke-comp.png"
+            />
           </div>
         </div>
 
@@ -188,7 +201,7 @@
           <a href="https://github.com/Cruebee" target="_blank"
             ><img src="img/github_icon.svg" alt="Github"
           /></a>
-          <a href="https://twitter.com/cruebee" target="_blank"
+          <a href="https://twitter.com/cruejameson" target="_blank"
             ><img src="img/twitter_icon.svg" alt="Twitter"
           /></a>
           <a
